test/scripted/compilation2/errors/expected_proto.bnj
# test:subtest
# test:error 4:11 "expected proto"

struct S: i32 {}

# test:subtest
# test:error 10:11 "expected proto" 

struct A {}
struct B: A {}
